fix(navbar): put navbar position fixed on mobile and tablet responsive

--- a/sections-css-landing/header.css
+++ b/sections-css-landing/header.css
@@ -102,7 +102,6 @@
 .navbar,
 .navbar-logo,
 .mobile-navbar-button {
-  position: relative;
   z-index: 2;
 }
 .navbar.transparent {
